Fixed icon and button colours in dark mode
refs https://ghost.slack.com/archives/C02G9E68C/p1652957053084759

- Activiy feed filters label colours
- Activiy feed member email address text colour
- . (i) icon when editing newsletters
- colour of edit pencil when editing free tier
- paid tiers 'active' dropdown button colour

--- a/ghost/admin/app/styles/patterns/buttons.css
+++ b/ghost/admin/app/styles/patterns/buttons.css
@@ -261,7 +261,7 @@ fieldset[disabled] .gh-btn {
     width: 1em;
     height: 1em;
     margin-right: 0.6em;
-    fill: var(--white);
+    fill: currentColor;
 }
 
 .gh-btn-white svg {
